fix katex overflow

--- a/assets/style/tailwind.css
+++ b/assets/style/tailwind.css
@@ -47,7 +47,7 @@
   }
 
   .katex {
-    @apply overflow-auto;
+    @apply overflow-scroll;
   }
 }
 
